--- a/css/main.css
+++ b/css/main.css
@@ -1,96 +1,175 @@
 /* quicksand-regular - latin */
+
 @font-face {
   font-family: 'Quicksand';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/quicksand-v21-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('../fonts/quicksand-v21-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  src: url('../fonts/quicksand-v21-latin-regular.eot');
+  /* IE9 Compat Modes */
+  src: local(''), url('../fonts/quicksand-v21-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
   url('../fonts/quicksand-v21-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
   url('../fonts/quicksand-v21-latin-regular.woff') format('woff'), /* Modern Browsers */
   url('../fonts/quicksand-v21-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/quicksand-v21-latin-regular.svg#Quicksand') format('svg'); /* Legacy iOS */
+  url('../fonts/quicksand-v21-latin-regular.svg#Quicksand') format('svg');
+  /* Legacy iOS */
 }
+
 /* quicksand-700 - latin */
+
 @font-face {
   font-family: 'Quicksand';
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/quicksand-v21-latin-700.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('../fonts/quicksand-v21-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  src: url('../fonts/quicksand-v21-latin-700.eot');
+  /* IE9 Compat Modes */
+  src: local(''), url('../fonts/quicksand-v21-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
   url('../fonts/quicksand-v21-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
   url('../fonts/quicksand-v21-latin-700.woff') format('woff'), /* Modern Browsers */
   url('../fonts/quicksand-v21-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/quicksand-v21-latin-700.svg#Quicksand') format('svg'); /* Legacy iOS */
+  url('../fonts/quicksand-v21-latin-700.svg#Quicksand') format('svg');
+  /* Legacy iOS */
 }
 
-html,body{
+html, body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Quicksand';
   font-style: normal;
   font-size: 16px;
-
 }
-*,*::after,*::before{
+
+*, *::after, *::before {
   box-sizing: inherit;
   margin: 0;
   padding: 0;
 }
-img{
+
+img {
   max-width: 100%;
   height: auto;
 }
-a{
+
+a {
   text-decoration: none;
 }
-/*header style start*/
-header{
-  padding: 0 10%;
 
+ul, li {
+  list-style: none;
 }
-.header{
+
+#close {
+  position: absolute;
+  top: 0;
+  left: 600px;
+  display: block;
+  color: white;
+  background: red;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  text-align: center;
+  font-size: 1.5rem;
+  padding-top: 3px;
+  cursor: pointer;
+}
+
+/*header style start*/
+
+header {
+  padding: 150px 10% 0;
+  min-height: 840px;
+  background-image: url('../images/Mask\ Group.png');
+  background-size: 743px 824px;
+  background-repeat: no-repeat;
+  background-position: right top;
+}
+
+.parent-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  min-height: 100px;
+  background: transparent;
+  padding-top: 20px;
+  z-index: 1000;
+}
+
+.header {
   display: flex;
   align-items: baseline;
-  justify-content: space-between;
-  padding-top: 10px;
-  margin-bottom: 174px;
+  justify-content: space-around;
 }
-.header a{
+
+.bg-white {
+  background: #ffffff;
+}
+
+.header a {
   text-decoration: none;
 }
-.thrivetalk{
-  width: 120px;
 
+.thrivetalk {
+  width: 120px;
+  margin-bottom: 30px;
 }
-.thrivetalk a{
+
+.thrivetalk a {
   display: block;
   width: 100%;
   height: 100%;
   font-size: 24px;
   color: #62D0DF;
+}
 
+#menu_burger img {
+  width: 50px;
 }
-.menu{
+
+.burger-lg {
+  display: none;
+}
+
+.menu {
   list-style: none;
+  margin-left: 3px;
 }
-.menu li{
+
+.menu li {
   display: inline-block;
-  margin-left: 13px;
+  margin-right: 13px;
   height: 40px;
 }
-.menu a{
+
+.menu a {
   font-size: 14px;
   color: #22356F;
-
-}
-.active{
-  border-bottom: 3px solid #22356F; 
 }
 
-.contact{
+.active {
+  border-bottom: 3px solid #22356F;
+}
+
+@media screen and (max-width:650px) {
+  .thrivetalk {
+    display: none;
+  }
+  .burger-sm {
+    display: block;
+  }
+  .menu li {
+    display: block;
+  }
+  .active {
+    border-bottom: 0;
+  }
+  .d-none {
+    display: none;
+  }
+}
+
+.contact {
   text-align: center;
   width: 150px;
   height: 50px;
@@ -98,87 +177,558 @@ header{
   border-radius: 50px;
   padding-top: 16px;
 }
-.contact a{
+
+.contact a {
   width: 100%;
-  height:100%;
+  height: 100%;
   font-size: 14px;
   color: #ffffff;
   display: block;
-
 }
-.helping{
+
+.text_box {
   width: 484px;
+}
+
+.text_3 a {
+  color: #22356F;
+}
+
+.text_3 {
   font-size: 48px;
+  margin-bottom: 40px;
 }
-.text_3 a{
-  color: black;
-  
-}
-.text_3{
-  width: 484px;
-  height: 167px;
 
-}
-.ff{
-  width: 469px;
-  height: 161px;
+.ff {
   font-size: 24px;
   color: #22356F;
+  margin-bottom: 40px;
+}
+
+.box {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: baseline;
+  width: 100%;
+}
+
+.text_4 {
+  position: relative;
+  width: 90px;
+  height: 29px;
+  background: transparent;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.text_4>a {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  padding-top: 2px;
+  border: 2px solid black;
+  border-radius: 5px;
+  text-align: center;
+  z-index: 10000;
+}
+
+.text_4::before {
+  position: absolute;
+  content: '';
+  top: 50px;
+  left: -70px;
+  width: 200px;
+  height: 100px;
+  background: linear-gradient(0deg, gold, rgb(214, 193, 72));
+  transform: rotate(20deg);
+  z-index: 0;
+  transition: 0.4s;
+}
+
+.text_4:hover::before {
+  top: -10px;
+  left: -20px;
+}
+
+.text_5 {
+  font-size: 16px;
+  padding-left: 38px;
 }
 
 /*header style end*/
 
+.pr {
+  width: 100%;
+  min-height: 607px;
+  background: #62D0DF;
+  background-image: url('../images/girl.png');
+  background-size: auto 100%;
+  background-repeat: no-repeat;
+  background-position: right center;
+  padding-top: 151px;
+}
 
+.path_2 {
+  width: 555px;
+  margin-left: 15%;
+  color: #ffffff;
+}
 
+.path_2 h3 {
+  font-size: 36px;
+  margin-bottom: 75px;
+}
 
+.path_2 p {
+  font-size: 24px;
+}
 
+.cart {
+  font-size: 32px;
+  color: #ffffff;
+}
 
+.cart_1 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  min-height: 360px;
+}
 
+.margin_top {
+  margin-top: 100px;
+}
 
+.cart_1>div {
+  grid-column: span 1;
+}
 
+.cart>div {
+  padding-top: 72px;
+}
 
+.cart_1>div:nth-of-type(1) {
+  background: #FFE2DE;
+}
 
+.cart_1>div:nth-of-type(2) {
+  background: #C4E769;
+}
 
+.cart_1>div:nth-of-type(3) {
+  background: #62D0DF;
+}
 
+.cart_1>div:nth-of-type(4) {
+  background: #0052C1;
+}
 
+.cart_1>div>a {
+  position: relative;
+  display: block;
+  border-top: 1px solid white;
+  width: 255px;
+  margin: 0 auto;
+  padding-left: 28px;
+  color: #FFFFFF;
+}
 
+.cart>div>a::before {
+  position: absolute;
+  top: 20px;
+  left: -5px;
+  content: '';
+  width: 9px;
+  height: 9px;
+  background: #E9B730;
+  border-radius: 100%;
+}
 
+.margin-top {
+  margin-top: 200px;
+}
 
+.path_3 {
+  min-height: 800px;
+  background-image: url('../images/man.png');
+  background-size: 400px 800px;
+  background-repeat: no-repeat;
+  background-position: left top;
+  padding-left: 35%;
+}
 
+.KNOW {
+  padding-top: 103px;
+  color: #22356F;
+}
 
+.KNOW>h6 {
+  margin-bottom: 225px;
+}
 
+.KNOW>p {
+  width: 676px;
+  font-size: 36px;
+  color: #22356F;
+  font-weight: bold;
+  margin-bottom: 152px;
+}
 
+.KNOW>p>a {
+  color: #62D0DF;
+}
 
+.KNOW>a {
+  color: #FAB63E;
+}
 
+.path_4 {
+  min-height: 800px;
+  background-image: url('../images/sportsmen.png');
+  background-size: 400px 800px;
+  background-repeat: no-repeat;
+  background-position: right top;
+  background-color: #22356F;
+}
 
+.us {
+  padding-top: 103px;
+  margin-bottom: 230px;
+  padding-left: 180px;
+}
 
+.Ready {
+  margin-bottom: 75px;
+  font-size: 64px;
+  color: #FFFFFF;
+  padding-left: 180px;
+}
 
+.take {
+  padding-left: 180px;
+  font-size: 36px;
+  margin-bottom: 18px;
+  color: #FFFFFF;
+  width: 800px;
+}
 
+.get {
+  padding-left: 180px;
+  color: #62D0DF;
+}
 
+.path_5 {
+  min-height: 380px;
+  background-image: url('../images/woman.png');
+  background-size: 570px 380px;
+  background-repeat: no-repeat;
+  background-position: left center;
+  background-color: #FFFFFF;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-end;
+  align-items: baseline;
+  padding-top: 98px;
+}
 
+.path_5>div {
+  width: 240px;
+  font-size: 14px;
+  padding-right: 70px;
+}
 
+.path_5>div>h6 {
+  color: #22356F;
+  margin-bottom: 40px;
+}
 
+.path_5>div>p {
+  color: rgba(34, 53, 111, 0.5);
+  margin-bottom: 30px;
+}
 
+.path_5>div>p>a {
+  color: blue;
+}
 
+.parolaks_1, .parolaks_2, .parolaks_3 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+}
 
+.parolaks_1, .parolaks_2 {
+  background-attachment: fixed;
+  height: 600px;
+}
 
+.parolaks_1 {
+  background-image: url('../images/1.jpg');
+}
 
+.parolaks_2 {
+  background-image: url('../images/2.jpg');
+}
 
+.parolaks_3 {
+  background-image: url('../images/3.jpg');
+  height: 700px;
+}
 
+.xz {
+  min-height: 361px;
+  padding-top: 156px;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: baseline;
+}
 
+.xz_1 {
+  flex-basis: 93px;
+  color: #22356F;
+  margin: 0 15% 0 10%;
+}
 
+.xz_2 {
+  font-size: 24px;
+  color: #22356F;
+  flex-basis: 592px;
+  font-weight: bold;
+}
 
+.modal-visible {
+  position: fixed;
+  top: 160px;
+  left: 30%;
+  width: 650px;
+  min-height: 300px;
+  border: 1px solid black;
+  border-radius: 10px;
+  background: pink;
+  padding: 5px;
+  background-image: url('../images/пишет.jpg');
+  background-repeat: no-repeat;
+  background-size: 70%;
+  padding-left: 250px;
+  background-position: center;
+  background-color: gray;
+  box-shadow: 5px 5px 10px 3px rgb(8, 4, 4);
+}
 
+.modal-invisible {
+  display: none;
+}
 
+.your_name {
+  margin-top: 40px;
+  border: 5px solid yellowgreen;
+  background: yellow;
+}
 
+.email {
+  margin-top: 20px;
+  border: 5px solid yellowgreen;
+  background: yellow;
+}
 
+.password {
+  margin-top: 20px;
+  border: 5px solid yellowgreen;
+  background: yellow;
+}
 
+.submit {
+  margin-left: 70px;
+  margin-top: 100px;
+  background: green;
+}
 
+.reset {
+  background: red;
+}
 
+.slider, #slides {
+  position: relative;
+  width: 700px;
+  margin: 0 auto;
+}
 
+.slider {
+  margin-bottom: 100px;
+  min-height: 500px;
+}
 
+#slides, .slide {
+  width: 700px;
+  height: 450px;
+}
 
+.slide a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
 
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  z-index: 1;
+  background-size: 700px 450px;
+}
 
+.showing {
+  opacity: 1;
+  z-index: 2;
+}
 
+.slide:nth-of-type(1) {
+  background-image: url('../images/slide_0.jpg');
+}
 
+.slide:nth-of-type(2) {
+  background-image: url('../images/slide_1.jpg');
+}
+
+.slide:nth-of-type(3) {
+  background-image: url('../images/slide_2.jpg');
+}
+
+.slide:nth-of-type(4) {
+  background-image: url('../images/slide_3.jpg');
+}
+
+.slide:nth-of-type(5) {
+  background-image: url('../images/slide_4.jpg');
+}
+
+.toggle {
+  position: absolute;
+  top: 225px;
+  display: block;
+  cursor: pointer;
+  font-size: 50px;
+  color: white;
+  z-index: 10;
+  background: black;
+  width: 60px;
+  height: 60px;
+  border-radius: 100%;
+  text-align: center;
+  line-height: 50px;
+}
+
+#slider_left {
+  left: 0;
+}
+
+#slider_right {
+  right: 0;
+}
+
+#toggle_radio {
+  position: absolute;
+  bottom: 90px;
+  left: 300px;
+  width: 130px;
+  height: 30px;
+  background: black;
+  text-align: center;
+  padding-top: 5px;
+  border-radius: 12px;
+  z-index: 10;
+}
+
+#slides_mine {
+  width: 700px;
+  margin: 8px 0;
+  font-size: 0;
+}
+
+.slide_mine {
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.slide_mine, .slide_mine img {
+  width: 132px;
+  font-size: 0;
+  height: 65px;
+}
+
+.slide_mine:nth-of-type(1) {
+  margin-left: 0;
+}
+
+.showing_mine {
+  box-shadow: 0 0 15px 5px orange;
+}
+
+.plas {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 200px);
+  width: 80%;
+  margin: 55px auto;
+  grid-gap: 10%;
+}
+
+.plas h5 {
+  color: #22356F;
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+
+.block {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  min-height: 400px;
+}
+
+.block>div {
+  flex-basis: 300px;
+  background: chocolate;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.parent-div__elem {
+  display: block;
+}
+
+.elem-none {
+  display: none;
+}
+
+.block>div:nth-of-type(1) {
+  animation: scrollBlock_1 1s 1;
+}
+
+.block>div:nth-of-type(2) {
+  animation: scrollBlock_2 1s 1;
+}
+
+.block>div:nth-of-type(3) {
+  animation: scrollBlock_3 1s 1;
+}
+
+@keyframes scrollBlock_1 {
+  0% {
+    transform: translateX(150%);
+  }
+}
+@keyframes scrollBlock_2 {
+  0% {
+    transform: scale(0.1);
+  }
+}
+@keyframes scrollBlock_3 {
+  0% {
+    transform: translateX(-150%);
+  }
+}
